# energyplus-gym

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
examples/: main.py  quickstart.py
examples/Q-transformer/: Q-transformer.csv  deep_q_network.py  dqn_agent.py  transformer_model.py
scripts/: eval_adaptation_ddqn_bilstm.py  eval_adaptation_ddqn_mlp.py  eval_adaptation_q_transformer.py  eval_generalisation_ddqn_bilstm.py  eval_generalisation_ddqn_mlp.py  eval_generalisation_q_transformer.py  train_adaptation_ddqn_bilstm.py  train_adaptation_ddqn_mlp.py  train_adaptation_q_transformer.py  train_generalisation_ddqn_bilstm.py  train_generalisation_ddqn_mlp.py  train_generalisation_q_transformer.py
src/eplus_gym/: __init__.py
src/eplus_gym/agents/DDQN_BiLSTM/: deep_q_network.py  dqn_agent.py  main_dqn_for_your_conference_paper.py  replay_memory.py
src/eplus_gym/agents/DDQN_MLP/: dqn_agent.py
src/eplus_gym/agents/Q_transformer/: Q-transformer.csv  deep_q_network.py  dqn_agent.py  positional_encoding.py  transformer_model.py
src/eplus_gym/agents/ddqn_bilstm/: BiLSTM_model.py  dqn_agent.py
src/eplus_gym/agents/ddqn_mlp/: deep_q_network.py  dqn_agent.py  main_dqn.py  replay_memory.py
src/eplus_gym/agents/q_transformer/: transformer_model.py
src/eplus_gym/envs/: energyplus.py  env.py  utils.py
src/eplus_gym/envs/assets/: AUS_WA_Perth.Metro.946080_TMYx.2007-2021.epw  FRA_BT_Brest.Bretagne.AP.071100_TMYx.2009-2023.epw  LUX_LU_Luxembourg.AP.065900_TMYx.2004-2018.epw  Luxembourg.csv  PRT_LB_Lisboa.Portela.AP.085360_TMYx.2007-2021.epw  USA_SD_Rapid.City.Rgnl.AP.726620_TMYx.2007-2021.epw  ZAF_WC_Cape.Town.Portnet.688170_TMYx.2009-2023.epw  model.bnd  model.csv  model.edd  model.eio  model.err  model.eso  model.idf  model.mdd  model.mtd  model.mtr  model.rdd  model.rvaudit  model.shd  model.sql  modelMeter.csv  modelSsz.csv  modelZsz.csv
tests/: test_smoke.py
(+1 files in other folders)
